cure styles, add bg, fix overflow

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -118,7 +118,7 @@ li.item {
 
 .textarea-input {
     width: 100%;
-    overflow: hidden;
+/*    overflow: hidden;*/
     background: url(../img/lines.png) repeat-y, url(../img/paper.png) repeat;
     color:#222;
     background-color: #62add6;
